provarAnt/00D190000000ZY2EAM/objects/SalesIQ__Affiliation_Object__c.object
<CustomObject>
    <fields>
        <fullName>SalesIQ__DSM_Approved__c</fullName>
        <defaultValue>false</defaultValue>
        <label>DSM Approved</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SalesIQ__Dealer_Group__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Dealer Group</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Account.RecordTypeId</field>
                <operation>equals</operation>
                <value>Dealer Automotive Group</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipName>Affiliation1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SalesIQ__Dealer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Dealer</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Account.RecordTypeId</field>
                <operation>equals</operation>
                <value>Dealer, OOB Dealer</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipName>Affiliation</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SalesIQ__RSD_Approved__c</fullName>
        <defaultValue>false</defaultValue>
        <label>RSD Approved</label>
        <type>Checkbox</type>
    </fields>
    <label>Affiliation Object</label>
    <nameField>
        <displayFormat>Aff-{0000000000}</displayFormat>
        <label>Affiliation ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Affiliation Object</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>